<resources>
    <string name="app_name">Res2rant</string>
    <string name="ok">OK</string>

    <!-- User Field Names -->
    <string name="full_name">Full Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="otp">OTP</string>
    <string name="email">E-mail</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="send_otp">Send OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="register">Register</string>
    <string name="register_full">Register as New User</string>

    <!-- Error Messages -->
    <string name="network_error">Network Error!</string>
    <string name="error_default">Something went wrong!</string>
    <string name="customer_only">Customer Only</string>
    <string name="customer_only_ex">Please Login with Manager App</string>
    <string name="repeat_pass_error">The passwords did\'t match!</string>
    <string name="login_fail">Login Failed</string>
    <string name="otp_fail">Could not send OTP</string>
    <string name="food_unavailable">The Selected food in not available at this moment.</string>
    <string name="order_exist_false">Order does not exist</string>


    <string name="admin">Admin</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="register_success">Registration Successful.\nPlease login with your email and password.</string>
    <string name="title_activity_admin_dashboard">Admin Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">Sub Title</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_updated">Profile Updated!</string>
    <string name="password_updated">Password Updated!</string>
    <string name="error_old_pass">Old Password did not match!</string>
    <string name="error_empty">Empty text not allowed!</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_foods">Foods</string>
    <string name="menu_users">Users</string>
    <string name="logout">Logout</string>

    <string name="add_food">Add Food</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="select_image">Select</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="image_upload_success">Image Uploaded Successfully!</string>
    <string name="image_upload_fail">Image Upload Failed!</string>

    <string name="edit_food">Edit Food</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="currency">৳</string>

    <string name="food_deleted">Item Deleted!</string>

    <string name="my_cart">My Cart</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>

    <string name="item_count">No. of Items</string>
    <string name="table_no">Table No.</string>
    <string name="num1">1</string>
    <string name="note">Note</string>
    <string name="note_ex">Leave a note</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart_added">Added to Cart</string>
    <string name="total_price_placeholder">Total: ৳ %.2f</string>

    <string name="my_orders">My Orders</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="total_default">Total: ৳ 0</string>
    <string name="confirm_message">This is a placeholder for a payment gateway where payment methods can be chosen.</string>
    <string name="transaction_success">Successful Transaction</string>
    <string name="transaction_fail">Failed Transaction</string>
    <string name="order_placed_success">Order Placed Successfully!</string>
    <string name="order_placed_fail">Failed to Place Order!</string>

    <string name="placeholder_date">Date: {{ Date }}</string>
    <string name="placeholder_status">{{ Status }}</string>

    <string name="orders">Orders</string>
    <string name="change_status">Change Status</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="total_orders">Total Orders:</string>
    <string name="zero">0</string>
    <string name="total_earning">Total Earning:</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="discount">Discount</string>
    <string name="discount_tag">%.0f%% off.</string>
    <string name="notification">Notification</string>
    <string name="date">Date</string>
    <string name="ordered_on">Ordered on</string>
    <string name="pending">Pending</string>
    <string name="cooking">Cooking</string>
    <string name="completed">Completed</string>
    <string name="canceled">Canceled</string>
    <string name="status">Status</string>
    <string name="top_foods">Top Foods</string>
    <string name="top_sale">Top Ordered</string>

    <string name="reorder">Reorder</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>