<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/padding_image">

    <ImageView
        android:id="@+id/cart_item_image"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_weight="1"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/ic_food" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="15dp">

        <TextView
            android:id="@+id/cart_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cart_item_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/table_no" />

        <TextView
            android:id="@+id/cart_item_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note" />

        <TextView
            android:id="@+id/cart_item_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_count"
            android:textColor="#777676"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>