<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.deba1.res2rant.ui.home.HomeFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_foods"
        android:name="com.deba1.res2rant.ui.food.FoodFragment"
        android:label="@string/menu_foods"
        tools:layout="@layout/fragment_foods" />

    <fragment
        android:id="@+id/nav_users"
        android:name="com.deba1.res2rant.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" />
</navigation>