<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/foodAddName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:autofillHints="@string/name"/>

    <EditText
        android:id="@+id/foodAddDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:autofillHints="@string/description"
        android:inputType="textMultiLine"
        android:lines="6" />

    <LinearLayout
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_marginTop="16dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/foodAddPreview"
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:layout_weight="2"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/ic_food" />

        <Button
            android:id="@+id/foodImageSelectButton"
            android:layout_width="0dp"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_image" />
    </LinearLayout>

    <EditText
        android:id="@+id/foodAddPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:autofillHints="@string/price"/>


</LinearLayout>