<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_image">

    <ImageView
        android:id="@+id/food_menu_item_dialog_image"
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:contentDescription="@string/image"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/field_margin_top">

            <TextView
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/description"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/food_menu_item_dialog_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/description" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/field_margin_top">

            <TextView
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/food_menu_item_dialog_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/currency" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/field_margin_top">

            <TextView
                android:id="@+id/food_menu_table_label"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/table_no"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/food_menu_item_dialog_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:entries="@array/table_nos"
                android:spinnerMode="dialog" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/field_margin_top">

            <TextView
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_count"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/food_menu_item_dialog_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="15"
                    android:progress="1" />

                <TextView
                    android:id="@+id/food_menu_item_dialog_counter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_weight="8"
                    android:text="@string/num1" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/note"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/food_menu_item_dialog_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/note_ex"
                android:inputType="textMultiLine" />
        </TableRow>
    </TableLayout>

</LinearLayout>